--- a/.github/workflows/opik-optimizer-unit-tests.yaml
+++ b/.github/workflows/opik-optimizer-unit-tests.yaml
@@ -66,4 +66,41 @@ jobs:
         - name: Run unit tests
           run: pytest tests/unit -vv --junitxml=${{ github.workspace }}/test_results_${{matrix.python_version}}.xml
 
+    dataset-source-check:
+        name: Dataset Integration Smoke Test
+        runs-on: ubuntu-latest
+        timeout-minutes: 30
+        needs: run-unit-tests
+
+        defaults:
+          run:
+            working-directory: sdks/opik_optimizer/
+
+        steps:
+        - name: Check out code
+          uses: actions/checkout@v4
+
+        - name: Setup Python 3.12
+          uses: actions/setup-python@v5
+          with:
+            python-version: "3.12"
+
+        - name: Cache HuggingFace datasets
+          uses: actions/cache@v4
+          with:
+            path: ~/.cache/huggingface
+            key: hf-datasets-${{ hashFiles('**/datasets/*.py') }}
+            restore-keys: |
+              hf-datasets-
+
+        - name: Install opik_optimizer
+          run: pip install .
+
+        - name: Install test requirements
+          run: |
+            cd ./tests
+            pip install --no-cache-dir --disable-pip-version-check -r test_requirements.txt
+
+        - name: Run dataset integration check
+          run: pytest tests/integration/datasets/test_dataset_sources.py -vv
 
