--- a/.github/workflows/opik-optimizer-unit-tests.yaml
+++ b/.github/workflows/opik-optimizer-unit-tests.yaml
@@ -40,6 +40,11 @@ jobs:
           uses: actions/setup-python@v5
           with:
             python-version: ${{matrix.python_version}}
+            cache: 'pip'
+            cache-dependency-path: |
+              sdks/opik_optimizer/pyproject.toml
+              sdks/opik_optimizer/setup.py
+              sdks/opik_optimizer/tests/test_requirements.txt
 
         - name: Cache HuggingFace datasets
           uses: actions/cache@v4
